# auth_from_scratch

op/authn/: authn.db  pyproject.toml
op/authn/curlscript/: check_cookie.sh  cookies.txt  create-user.sh  health_check.sh  login.sh  login_save_response.sh  logout.sh  response.json
op/authn/src/authn/: __init__.py  db.py  main.py  models.py  security.py  settings.py  tokens.py  users_client.py
op/gateway/: pyproject.toml
op/users/: pyproject.toml
