[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simon Lee", email = "simon_lee@gss.com.tw" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
gateway = "gateway:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
